web copy complete

--- a/_includes/components/pages/about/index.njk
+++ b/_includes/components/pages/about/index.njk
@@ -14,7 +14,7 @@
         <!-- Content area -->
         <div class="about-right-content-area-solar-energy">
           <div class="title-area-left">
-            <p class="pre"><span>About</span> Company</p>
+            <p class="pre"><span>About</span> ZERONET Clean Energy Ltd</p>
             <h2 class="title skew-up">{{ title }}</h2>
           </div>
           <!-- Tab navigation -->
@@ -58,7 +58,7 @@
                 </div>
                 <!-- Video area -->
                 <div class="vedio-area-start">
-                  <a href="#" class="rts-btn btn-primary">Read More <i class="fa-regular fa-arrow-right"></i></a>
+                  <a href="/services/" class="rts-btn btn-primary">Our Services <i class="fa-regular fa-arrow-right"></i></a>
                   <div class="vedio-icone">
                     <a class="play-video video-play-button" href="#">
                       <span></span>
