--- a/_includes/components/pages/home/about.njk
+++ b/_includes/components/pages/home/about.njk
@@ -50,13 +50,13 @@
                             {% endfor %}
                         </div>
                         <div class="solari-about-button-area mt--40">
-                            <a href="aboutus.html" class="rts-btn btn-primary">Learn More</a>
+                            <a href="/about/" class="rts-btn btn-primary">Learn More</a>
                             <div class="call-button">
                                 <i class="fa-solid fa-phone"></i>
                                 <div class="info">
                                     <span>Call Us 24/7</span>
-                                    <a href="tel:+4733378901">
-                                        <h6 class="title">+236-3256.21456</h6>
+                                    <a href="tel:(+256)771326180">
+                                        <h6 class="title">+236 771 326 180</h6>
                                     </a>
                                 </div>
                             </div>
