--- a/_includes/components/pages/home/workingProcess.njk
+++ b/_includes/components/pages/home/workingProcess.njk
@@ -33,7 +33,7 @@
                                     <div class="inner-content">
                                         <div class="inner">
                                             <span class="pre">{{ slide.label }}</span>
-                                            <a href="project-details.html">
+                                            <a href="#">
                                                 <h5 class="title">{{ slide.title }}</h5>
                                             </a>
                                         </div>
