--- a/_includes/components/pages/home/banner.njk
+++ b/_includes/components/pages/home/banner.njk
@@ -19,19 +19,19 @@
                                     </h1>
                                     <p class="disc">{{ slide.description }}</p>
                                     <div class="button-solari-banner-area">
-                                        <a href="{{ bannerSection.cta.url }}" class="rts-btn btn-primary">{{ bannerSection.cta.label }}</a>
-                                        <div class="vedio-icone">
-                                            <a class="video-play-button play-video" href="{{ bannerSection.videoButton.url }}">
-                                                <span></span>
-                                                <p class="text">
-                                                    {{ bannerSection.videoButton.label }}
-                                                </p>
-                                            </a>
-                                            <div class="video-overlay">
-                                                <a class="video-overlay-close">×</a>
-                                            </div>
+                                    <a href="{{ slide.cta.url }}" class="rts-btn btn-primary">{{ slide.cta.label }}</a>
+                                    <div class="vedio-icone">
+                                        <a class="video-play-button play-video" href="{{ bannerSection.videoButton.url }}">
+                                            <span></span>
+                                            <p class="text">
+                                                {{ bannerSection.videoButton.label }}
+                                            </p>
+                                        </a>
+                                        <div class="video-overlay">
+                                            <a class="video-overlay-close">×</a>
                                         </div>
                                     </div>
+                                </div>
                                 </div>
                             </div>
                         </div>
