--- a/_includes/components/pages/home/cta.njk
+++ b/_includes/components/pages/home/cta.njk
@@ -14,19 +14,31 @@
                         {% endif %}
                     </div>
                     <div class="right-area">
-                        <form action="#" class="cta-form">
+                        <form
+                            name="contact"
+                            method="POST"
+                            data-netlify="true"
+                            netlify-honeypot="bot-field"
+                            class="cta-form">
+                            <!-- Hidden input for bot protection -->
+                            <input type="hidden" name="form-name" value="contact" />
+                            <div hidden>
+                                <input name="bot-field" />
+                            </div>
+
                             {% for field in ctaSection.form %}
                                 {% if field.type !== 'button' %}
                                 <div class="single-input">
                                     <input
                                         type="{{ field.type }}"
+                                        name="{{ field.id }}"
                                         placeholder="{{ field.placeholder }}"
                                         id="{{ field.id }}"
                                         {% if field.required %}required{% endif %}
                                     >
                                 </div>
                                 {% else %}
-                                <button class="{{ field.class }}">{{ field.text }}</button>
+                                <button type="submit" class="{{ field.class }}">{{ field.text }}</button>
                                 {% endif %}
                             {% endfor %}
                         </form>
