--- a/_includes/components/pages/home/partners.njk
+++ b/_includes/components/pages/home/partners.njk
@@ -1,17 +1,15 @@
-    <!-- rts brand area start -->
-    <div class="rts-brand-area rts-section-gap">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="brand-area-h2">
-                        <a href="#"><img src="assets/images/brand/01.png" alt="brand_start"></a>
-                        <a href="#"><img src="assets/images/brand/02.png" alt="brand_start"></a>
-                        <a href="#"><img src="assets/images/brand/03.png" alt="brand_start"></a>
-                        <a href="#"><img src="assets/images/brand/04.png" alt="brand_start"></a>
-                        <a href="#"><img src="assets/images/brand/05.png" alt="brand_start"></a>
-                    </div>
+<!-- rts brand area start -->
+<div class="rts-brand-area rts-section-gap">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="brand-area-h2">
+                    {% for logo in partnersSection.logos %}
+                    <a href="#"><img src="{{ logo.src }}" alt="{{ logo.alt }}"></a>
+                    {% endfor %}
                 </div>
             </div>
         </div>
     </div>
-    <!-- rts brand area end -->
+</div>
+<!-- rts brand area end -->
