--- a/_includes/components/pages/home/services.njk
+++ b/_includes/components/pages/home/services.njk
@@ -1,4 +1,4 @@
-<!-- service area start -->
+<!-- service-area.njk -->
 <div class="rts-service-area-height-solari rts-section-gap position-relative">
     <span class="stok-bg images-r">
         Our Services
@@ -17,38 +17,39 @@
             </div>
         </div>
         <div class="row g-24 mt--20">
-            {% for service in services.services %}
+            {% set randomServices = servicesData.services | slice(0, 4) %}
+            {% for service in randomServices %}
             <div class="col-xl-3 col-lg-4 col-sm-6 col-12">
-                <!-- single service area start -->
                 <div class="single-solari-service-start {% if loop.index == 2 %}two{% elif loop.index == 3 %}three{% elif loop.index == 4 %}four{% endif %}">
                     <div class="icon-area">
-                        <!-- Default service icon - you can customize per category if needed -->
                         {% if service.category == "Strategic Services" %}
-                        <svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M36.0892 5.03606C32.8467 5.03606 30.2142 7.66861 30.2142 10.911C30.2142 14.1535 32.8467 16.786 36.0892 16.786C39.3316 16.786 41.9641 14.1535 41.9641 10.911C41.9641 7.66861 39.3316 5.03606 36.0892 5.03606Z" fill="#4AAB3D"/>
-                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#4AAB3D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-briefcase"><rect width="20" height="14" x="2" y="7" rx="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>
                         {% elif service.category == "Development" %}
-                        <svg width="51" height="36" viewBox="0 0 51 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M50.1691 18.2293L35.9942 4.14235C35.9658 4.11417 35.9446 4.10087 35.921 4.08678C35.7855 3.97957 35.6186 3.91304 35.4374 3.91304H33.401L35.9942 1.33591" fill="#4AAB3D"/>
-                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#4AAB3D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-code"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg>
+                        {% elif service.category == "Engineering" %}
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#4AAB3D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-settings"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>
+                        {% elif service.category == "Optimization" %}
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#4AAB3D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-bar-chart"><line x1="12" x2="12" y1="20" y2="10"/><line x1="18" x2="18" y1="20" y2="4"/><line x1="6" x2="6" y1="20" y2="16"/></svg>
+                        {% elif service.category == "Management" %}
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#4AAB3D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-list-checks"><path d="m3 17 2 2 4-4"/><path d="m3 7 2 2 4-4"/><path d="M13 6h8"/><path d="M13 12h8"/><path d="M13 18h8"/></svg>
+                        {% elif service.category == "Technology" %}
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#4AAB3D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-cpu"><rect x="4" y="4" width="16" height="16" rx="2"/><rect x="9" y="9" width="6" height="6"/><path d="M15 2v2"/><path d="M15 20v2"/><path d="M2 15h2"/><path d="M2 9h2"/><path d="M20 15h2"/><path d="M20 9h2"/><path d="M9 2v2"/><path d="M9 20v2"/></svg>
+                        {% elif service.category == "Electric Mobility" %}
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#4AAB3D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-car"><path d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9L17 10H7l-3.5 1.1C2.7 11.3 2 12.1 2 13v3c0 .6.4 1 1 1h2"/><path d="M14 17V6.5a1.5 1.5 0 0 0-3 0V17"/><path d="M6 17v-2.5"/><path d="M18 17v-2.5"/><path d="M8 11v4"/><path d="M16 11v4"/><path d="M7.5 14h9"/><path d="M6 2v2"/><path d="M18 2v2"/><path d="M6 20h12a2 2 0 1 0 0-4H6a2 2 0 1 0 0 4Z"/></svg>
                         {% else %}
-                        <svg width="42" height="50" viewBox="0 0 42 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M40.8102 37.8259C36.0781 30.9957 33.4281 28.0137 28.7885 24.3587" fill="#4AAB3D"/>
-                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#4AAB3D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-zap"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/></svg>
                         {% endif %}
                     </div>
-                    <a href="/services/{{ service.slug }}/">
-                        <h5 class="title">{{ service.title }}</h5>
-                    </a>
+                        <a href="/services/{{ service.slug }}/">
+        <h5 class="title">{{ service.title }}</h5>
+    </a>
                     <p class="disc">
-                        {{ service.category }}
+                        {{ service.description }}
                     </p>
                     <a href="/services/{{ service.slug }}/" class="read-more-btn">Read More<i class="fa-regular fa-arrow-right"></i></a>
                 </div>
-                <!-- single service area end -->
             </div>
             {% endfor %}
         </div>
     </div>
 </div>
-<!-- service area end -->
