--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -9,21 +9,19 @@
                         <div class="left">
                             <div class="inf">
                                 <i class="fa-regular fa-clock"></i>
-                                <p>Mon - Fri 8:00 - 18:00 / Sunday 8:00 - 14:00</p>
+                                <p>Mon - Fri 8:00 AM - 6:00 PM / Saturday 9:00  AM - 2:00 PM</p>
                             </div>
                             <div class="inf">
                                 <i class="fa-regular fa-envelope"></i>
-                                <a href="tel:+4733378901">info@zeronetcleanenergy.com</a>
+                                <a href="mailto:info@zeronetcleanenergy.com">info@zeronetcleanenergy.com</a>
                             </div>
                         </div>
                         <div class="right">
                             <div class="social-header-top-h2">
                                 <span>Visit Us:</span>
                                 <ul>
-                                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                    <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/zeronet-clean-energy-ltd/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -56,14 +54,15 @@
                             </nav>
                         </div>
 
+
                         <div class="actions-area">
-                            <div class="menu-btn" id="menu-btn">
-                                <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <rect y="14" width="20" height="2" fill="#4AAB3D"/>
-                                    <rect y="7" width="20" height="2" fill="#4AAB3D"/>
-                                    <rect width="20" height="2" fill="#4AAB3D"/>
-                                </svg>
-                            </div>
+                                   <div class="menu-btn" id="menu-btn">
+                            <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect y="14" width="20" height="2" fill="#4AAB3D" />
+                                <rect y="7" width="20" height="2" fill="#4AAB3D" />
+                                <rect width="20" height="2" fill="#4AAB3D" />
+                            </svg>
+                        </div>
                             <a href="/appointments" class="rts-btn btn-primary">Request an Appointment</a>
                         </div>
                     </div>
@@ -73,53 +72,29 @@
     </div>
 </div>
 
+
 <!-- Side bar -->
 <div id="side-bar" class="side-bar header-two">
     <button class="close-icon-menu"><i class="far fa-times"></i></button>
-    <!-- inner menu area desktop start -->
-    <div class="inner-main-wrapper-desk">
-        <div class="thumbnail">
-            <img src="/assets/images/banner/04.jpg" alt="elevate">
-        </div>
-        <div class="inner-content">
-            <h4 class="title">We Provide The Power of Renewable Energy.</h4>
-            <p class="disc">
-                We successfully cope with tasks of varying complexity, provide long-term guarantees and regularly master new technologies.
-            </p>
-            <div class="footer">
-                <h4 class="title">Got a project in mind?</h4>
-                <a href="/contact" class="rts-btn btn-primary">Let's talk</a>
-            </div>
-        </div>
-    </div>
+
     <!-- mobile menu area start -->
     <div class="mobile-menu-main">
         <nav class="nav-main mainmenu-nav mt--30">
             <ul class="mainmenu metismenu" id="mobile-menu-active">
-                <li class="has-droupdown">
-                    <a href="#" class="main">Home</a>
-                    <ul class="submenu mm-collapse">
-                        <li><a href="#" class="tag">Multipage</a></li>
-                        <li><a class="mobile-menu-link" href="/">Home Page One</a></li>
-                        <li><a class="mobile-menu-link" href="/about">About</a></li>
-                        <li><a class="mobile-menu-link" href="/services">Services</a></li>
-                        <li><a class="mobile-menu-link" href="/strategy">Strategy</a></li>
-                        <li><a class="mobile-menu-link" href="/contact">Contact</a></li>
-                    </ul>
-                </li>
-                <li class="has-droupdown">
-                    <a href="#" class="main">Services</a>
-                    <ul class="submenu mm-collapse">
-                        <li><a href="/services">Our Services</a></li>
-                        <li><a href="/services/solar-panel">Solar Panel</a></li>
-                        <li><a href="/services/turbines">Turbines</a></li>
-                    </ul>
+                <li>
+                    <a href="/" class="main">Home</a>
                 </li>
                 <li>
-                    <a href="/blog" class="main">Blog</a>
+                    <a href="/about" class="main">About</a>
                 </li>
                 <li>
-                    <a href="/contact" class="main">Contact Us</a>
+                    <a href="/services" class="main">Services</a>
+                </li>
+                <li>
+                    <a href="/strategy" class="main">Strategy</a>
+                </li>
+                <li>
+                    <a href="/contact" class="main">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -127,22 +102,12 @@
         <div class="rts-social-style-one pl--20 mt--100">
             <ul>
                 <li>
-                    <a href="#">
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
+                    <a href="#" target="_blank">
                         <i class="fa-brands fa-twitter"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/company/zeronet-clean-energy-ltd/" target="_blank">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </a>
                 </li>
