--- a/_includes/components/pages/home/about.njk
+++ b/_includes/components/pages/home/about.njk
@@ -56,7 +56,7 @@
                                 <div class="info">
                                     <span>Call Us 24/7</span>
                                     <a href="tel:(+256)771326180">
-                                        <h6 class="title">+236 771 326 180</h6>
+                                        <h6 class="title">+256 771 326 180</h6>
                                     </a>
                                 </div>
                             </div>
@@ -80,10 +80,14 @@
             </div>
         </div>
         {% endif %}
+
+        {% if experienceCounter %}
         <div class="experiencea-area images">
             <h3 class="title">{{ aboutSection.experienceYears }}+</h3>
             <p>Years Experience</p>
         </div>
+{% endif %}
+
     </div>
 </div>
         </div>
