--- a/_includes/components/pages/home/cta.njk
+++ b/_includes/components/pages/home/cta.njk
@@ -1,3 +1,4 @@
+
 <!-- rts cta area start -->
 <div class="rts-cta-area rts-section-gapBottom">
     <div class="container">
@@ -22,6 +23,8 @@
                             class="cta-form">
                             <!-- Hidden input for bot protection -->
                             <input type="hidden" name="form-name" value="contact" />
+                            <!-- Redirect after form submission -->
+                            <input type="hidden" name="redirect" value="/thank-you/" />
                             <div hidden>
                                 <input name="bot-field" />
                             </div>
