--- a/_includes/components/pages/home/workingProcess.njk
+++ b/_includes/components/pages/home/workingProcess.njk
@@ -27,13 +27,13 @@
                             <div class="swiper-slide">
                                 <!-- single case air condition start-->
                                 <div class="single-case-ac">
-                                    <a href="project-details.html" class="thumbnail">
+                                    <a href="/appointments/" class="thumbnail">
                                         <img src="{{ slide.image }}" alt="{{ slide.title }}">
                                     </a>
                                     <div class="inner-content">
                                         <div class="inner">
                                             <span class="pre">{{ slide.label }}</span>
-                                            <a href="#">
+                                            <a href="/appointments/">
                                                 <h5 class="title">{{ slide.title }}</h5>
                                             </a>
                                         </div>
