--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -9,6 +9,6 @@ layout: layouts/base.njk
 {% include "components/pages/home/workingProcess.njk" %}
 {% include "components/pages/home/faq.njk" %}
 {% include "components/pages/home/cta.njk" %}
-{% include "components/pages/home/partners.njk" %}
+{# include "components/pages/home/partners.njk" #}
 
 {{ content | safe }}
