--- a/_includes/components/pages/contact/index.njk
+++ b/_includes/components/pages/contact/index.njk
@@ -50,37 +50,11 @@
 <div class="rts-contact-wrapper-form-area rts-section-gapBottom">
   <div class="container">
     <div class="row g-24">
-      <div class="col-lg-7 col-md-12 col-sm-12 col-12">
-        <div class="form--area">
-          <div class="title-area-left">
-            <p class="pre">
-              <span>Feel Free</span> To Contact Us
-            </p>
-            <h2 class="title">
-              Let's Get in Touch
-            </h2>
-          </div>
-          <form
-            name="contact"
-            method="POST"
-            data-netlify="true"
-            class="contact-page-form mt--30">
-            <input type="hidden" name="form-name" value="contact">
-            <div class="name-email-wraper">
-              <input name="name" type="text" placeholder="Your Name" required>
-              <input name="email" type="email" placeholder="Email Address" required>
-            </div>
-            <input type="text" name="subject" placeholder="Select Subject">
-            <textarea name="message" placeholder="Type Your Message" required></textarea>
-            <button type="submit" class="rts-btn btn-primary">Send Message</button>
-          </form>
-        </div>
-      </div>
-      <div class="col-lg-5 col-md-12 col-sm-12 col-12">
+      <div class="col-12"> <!-- Changed to full width column -->
         <div class="map-area-wrapper">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7575938866434!2d32.58241021475856!3d0.3269444997727285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177dbb8080541c63%3A0x7c972d550eb3b861!2sNakasero%2C%20Kampala%2C%20Uganda!5e0!3m2!1sen!2sus!4v1666823793425!5m2!1sen!2sus"
-            width="600"
+            width="100%"
             height="690"
             style="border:0;"
             allowfullscreen=""
