--- a/_includes/components/pages/home/cta.njk
+++ b/_includes/components/pages/home/cta.njk
@@ -1,4 +1,3 @@
-
 <!-- rts cta area start -->
 <div class="rts-cta-area rts-section-gapBottom">
     <div class="container">
@@ -18,13 +17,14 @@
                         <form
                             name="contact"
                             method="POST"
+                            action="/thank-you/"
                             data-netlify="true"
                             netlify-honeypot="bot-field"
                             class="cta-form">
                             <!-- Hidden input for bot protection -->
                             <input type="hidden" name="form-name" value="contact" />
-                            <!-- Redirect after form submission -->
-                            <input type="hidden" name="redirect" value="/thank-you/" />
+
+                            <!-- Honeypot field for spam prevention -->
                             <div hidden>
                                 <input name="bot-field" />
                             </div>
