--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -21626,7 +21626,7 @@ p {
   overflow: hidden;
   display: block;
   position: relative;
-  background-image: url(../images/service/19.png);
+  background-image: url(../images/category/01.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 2;
